# playground-interp-no_std-rs

./: Cargo.toml  Makefile  README.md  commands_from_build_plan.py  notes.md  rust-toolchain.toml  test.sh
.cargo/: config.toml
examples/: dynamic_linker.rs
src/: abi.rs  fs.rs  io.rs  lib.rs  main.rs  mem.rs  support.rs  syscall.rs  util.rs
test_interp/: main.cpp  minimal.cpp  minimal_lib.cpp
