[package]
name = "syscall_test"
version = "0.0.0"
authors = ["Ivor Wanders <ivor@iwanders.net>"]
license = "MIT OR Apache-2.0"

# Disables error handling, prevents eh_personality requirement.
[profile.dev]
panic = "abort"
opt-level = 1
[profile.release]
panic = "abort"

[dependencies]

compiler_builtins = { git = "https://github.com/rust-lang/compiler-builtins", features = ["c"]}
