[package]
name = "syscall_test"
version = "0.0.0"
authors = ["Ivor Wanders <ivor@iwanders.net>"]
license = "MIT OR Apache-2.0"

# Disables error handling, prevents eh_personality requirement.
[profile.dev]
panic = "abort"
[profile.release]
panic = "abort"

[[example]]
name = "dynamic_linker"
path = "examples/dynamic_linker.rs"

# Dev dependencies for the dynamic linker example.
[dev-dependencies]
xmas-elf = "0.8.0"
zero = "0.1.2"
